objects/Sales_Data__c.object
<CustomObject>
    <fields>
        <fullName>TECH_LAST_ORDER_DT_TXT__c</fullName>
        <label>TECH_LAST_ORDER_DT_TXT</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Tech_IMU_LY__c</fullName>
        <label>Tech IMU LY</label>
        <precision>15</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Tech_IMU_TY__c</fullName>
        <label>Tech IMU TY</label>
        <precision>15</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Tech_LY__c</fullName>
        <label>Tech LY</label>
        <precision>15</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Tech_Last_Order_amt__c</fullName>
        <label>Tech Last Order $</label>
        <precision>15</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Tech_Pot__c</fullName>
        <label>Tech Pot</label>
        <precision>15</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Tech_TY__c</fullName>
        <label>Tech TY</label>
        <precision>15</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Tech_Total_LY__c</fullName>
        <label>Tech Total LY</label>
        <precision>15</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Total_Order__c</fullName>
        <label>Total Order #</label>
        <precision>15</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Unique_Key__c</fullName>
        <caseSensitive>true</caseSensitive>
        <externalId>true</externalId>
        <label>Unique Key</label>
        <length>100</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>WEEKLY_ORDER_FLG__c</fullName>
        <label>WEEKLY_ORDER_FLG</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>WEEKLY_SALES_FLG__c</fullName>
        <label>WEEKLY_SALES_FLG</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>WRITING_LAST_ORDER_DT_TXT__c</fullName>
        <label>WRITING_LAST_ORDER_DT_TXT</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Weeks_Since_1st_Order__c</fullName>
        <label>Weeks Since 1st Order</label>
        <precision>15</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Weeks_Since_Last_Order__c</fullName>
        <label>Weeks Since Last Order</label>
        <precision>15</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Writing_Drafting_IMU_LY__c</fullName>
        <label>Writing Drafting IMU LY</label>
        <precision>15</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Writing_Drafting_IMU_TY__c</fullName>
        <label>Writing Drafting IMU TY</label>
        <precision>15</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Writing_Drafting_LY__c</fullName>
        <label>Writing Drafting LY</label>
        <precision>15</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Writing_Drafting_Last_Order_amt__c</fullName>
        <label>Writing Drafting Last Order $</label>
        <precision>15</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Writing_Drafting_Pot__c</fullName>
        <label>Writing Drafting Pot</label>
        <precision>15</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Writing_Drafting_TY__c</fullName>
        <label>Writing Drafting TY</label>
        <precision>15</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Writing_Drafting_Total_LY__c</fullName>
        <label>Writing Drafting Total LY</label>
        <precision>15</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>YTD_Sales_LY_IMU__c</fullName>
        <label>YTD Sales LY IMU</label>
        <precision>15</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>YTD_Sales_LY__c</fullName>
        <label>YTD Sales LY</label>
        <precision>15</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>YTD_Sales_TY_IMU__c</fullName>
        <label>YTD Sales TY IMU</label>
        <precision>15</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>YTD_Sales_TY__c</fullName>
        <label>YTD Sales TY</label>
        <precision>15</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>YTD_Sales_TY_text__c</fullName>
        <formula>&apos;$ &apos;+text(round(YTD_Sales_TY__c,0))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>YTD Sales TY text</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Year_Goal__c</fullName>
        <label>Year Goal</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Year_LY_IMU__c</fullName>
        <label>Year LY IMU</label>
        <precision>15</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Year_LY__c</fullName>
        <label>Year LY</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <label>Sales Data</label>
    <nameField>
        <label>Sales Data Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Sales Data</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>